architecture-ide/tests/fixtures/negative/C5_missing_purpose.concept
concept Empty

  purpose
    placeholder purpose text

  actions
    noop [ ] => [ ok: boolean ]

  operational principle
    after noop [ ] => [ ok: true ]
